@@ -184,6 +184,22 @@ void ban_flooder(aClient *cptr)
 	return;
 }
 
+inline aCommand *find_Command(char *cmd, int token)
+{
+	aCommand	*p;
+	
+	for (p = CommandHash[toupper(*cmd)]; p; p = p->next)
+		if (p->token && token)
+		{
+			if (!strcmp(p->cmd, cmd))
+				return (p);
+		}
+		else
+			if (!match(p->cmd, cmd))
+				return (p);
+	return NULL;
+}
+
 /*
  * parse a buffer.
  *
@@ -202,7 +218,7 @@ int  parse(cptr, buffer, bufend, mptr)
 	time_t then, ticks;
 	int  retval;
 #endif
-	struct Message *bmptr;
+	aCommand *cmptr = NULL;
 
 	Debug((DEBUG_ERROR, "Parsing: %s (from %s)", buffer,
 	    (*cptr->name ? cptr->name : "*")));
@@ -317,7 +333,7 @@ int  parse(cptr, buffer, bufend, mptr)
 	if (len == 3 &&
 	    isdigit(*ch) && isdigit(*(ch + 1)) && isdigit(*(ch + 2)))
 	{
-		mptr = NULL;
+		cmptr = NULL;
 		numeric = (*ch - '0') * 100 + (*(ch + 1) - '0') * 10
 		    + (*(ch + 2) - '0');
 		paramcount = MAXPARA;
@@ -327,43 +343,10 @@ int  parse(cptr, buffer, bufend, mptr)
 	{
 		if (s)
 			*s++ = '\0';
+		
+		cmptr = find_Command(ch, IsServer(cptr) ? 1 : 0);
 
-		/* xx or x = token :P */
-		if ((strlen(ch) < 3) && IsServer(cptr))
-		{
-			token = 1;
-		}
-		else
-		{
-			token = 0;
-		}
-		bmptr = mptr;
-
-		/* run a fast token search through if token */
-		mfound = 0;
-		if (token == 1)
-		{
-			for (; mptr->cmd; mptr++)
-			{
-				if (strcmp(mptr->token, ch) == 0)
-				{
-					mfound = 1;
-					break;
-				}
-			}
-		}
-
-		/* no token match .. grr :P */
-		if (mfound == 0)
-		{
-			mptr = bmptr;
-			for (; mptr->cmd; mptr++)
-			{
-				if (mycmp(mptr->cmd, ch) == 0)
-					break;
-			}
-		}
-		if (!mptr->cmd)
+		if (!cmptr)
 		{
 			/*
 			   ** Note: Give error message *only* to recognized
@@ -389,9 +372,9 @@ int  parse(cptr, buffer, bufend, mptr)
 			ircstp->is_unco++;
 			return (-1);
 		}
-		paramcount = mptr->parameters;
+		paramcount = cmptr->parameters;
 		i = bufend - ch;	/* Is this right? -Donwulff */
-		mptr->bytes += i;
+		cmptr->bytes += i;
 		/* Changed this whole lag generating crap .. 
 		 * We only generate fake lag in HTM ..
 		 * --Stskeeps
@@ -445,23 +428,23 @@ int  parse(cptr, buffer, bufend, mptr)
 		}
 	}
 	para[++i] = NULL;
-	if (mptr == NULL)
+	if (cmptr == NULL)
 		return (do_numeric(numeric, cptr, from, i, para));
 	/* now, lets make sure they use a legit commnd... -nikb */
 	/* There is code in s_serv.c for ADMIN and VERSION and
 	 * in s_user.c for NOTICE to limit commands by 
 	 * unregistered users. -Studded */
 	if (IsShunned(cptr) && IsRegistered(cptr))
-		if ((mptr->func != m_admin) && (mptr->func != m_quit)
-		    && (mptr->func != m_pong))
+		if ((cmptr->func != m_admin) && (cmptr->func != m_quit)
+		    && (cmptr->func != m_pong))
 			return -4;
 
 	if ((!IsRegistered(cptr)) &&
-	    (((mptr->func != m_user) && (mptr->func != m_nick) &&
-	    (mptr->func != m_server) && (mptr->func != m_pong) &&
-	    (mptr->func != m_pass) && (mptr->func != m_quit) &&
-	    (mptr->func != m_protoctl) && (mptr->func != m_error) &&
-	    (mptr->func != m_admin) && (mptr->func != m_version)
+	    (((cmptr->func != m_user) && (cmptr->func != m_nick) &&
+	    (cmptr->func != m_server) && (cmptr->func != m_pong) &&
+	    (cmptr->func != m_pass) && (cmptr->func != m_quit) &&
+	    (cmptr->func != m_protoctl) && (cmptr->func != m_error) &&
+	    (cmptr->func != m_admin) && (cmptr->func != m_version)
 	    )))
 	{
 		sendto_one(from, ":%s %d %s :You have not registered",
@@ -469,22 +452,22 @@ int  parse(cptr, buffer, bufend, mptr)
 		return -1;
 	}
 
-	mptr->count++;
-	if (IsRegisteredUser(cptr) && mptr->func == m_private)
+	cmptr->count++;
+	if (IsRegisteredUser(cptr) && cmptr->func == m_private)
 		from->user->last = TStime();
 
 #ifndef DEBUGMODE
-	return (*mptr->func) (cptr, from, i, para);
+	return (*cmptr->func) (cptr, from, i, para);
 #else
 	then = clock();
-	retval = (*mptr->func) (cptr, from, i, para);
+	retval = (*cmptr->func) (cptr, from, i, para);
 	if (retval != FLUSH_BUFFER)
 	{
 		ticks = (clock() - then);
 		if (IsServer(cptr))
-			mptr->rticks += ticks;
+			cmptr->rticks += ticks;
 		else
-			mptr->lticks += ticks;
+			cmptr->lticks += ticks;
 		cptr->cputime += ticks;
 	}
 
